- Shows pinned priorities by default; falls back to cards tagged with #top/#priority/#prio/#p1 when pinned is empty.
- Priorities tab simplified to pinned-only view (no clickable card list to the board).

** Deletion
- Fixed delete confirmation dialog: implemented a functional modal so confirm actually deletes.
- Delete icon always rendered at top-right of task cards (visible on hover; hidden in Select Mode only).
- Kept Undo behavior (Cmd+Z or the blue Undo toast) to restore last delete.

** Tasks & Board UX
- New tasks start empty (no auto-generated "Task <id>" content) and enter edit mode immediately.
- Added Select Mode to multi-select and bulk delete tasks (toggle via bottom-right button or command palette).
- Removed duplicate action button from card hover (kept delete only).
- Column colors: added color picker to column headers and applied header background.

** Drag & Drop
- Added KeyboardSensor (dnd-kit) for keyboard-accessible drag/drop.
- Switched collision detection to closestCorners for better drop behavior.
- Updated task.status when moving across columns (drag or keyboard moves).
- Highlight column drop area during drag.

** Boards
- Board list (sidebar) supports drag-to-reorder; top-most becomes default/current.
- On startup, opens the first board in saved order if available.

** Corrections
- Previous note claiming the delete confirmation dialog was removed was inaccurate; the dialog is present and functional now.

* 2025-09-11 — Data Portability

** Feature: JSON Import/Export
- Implemented a new "Data Management" panel in the sidebar.
- Users can now export all application data (boards, tasks, notes, intentions) into a single, human-readable JSON file. This allows for easy backups and manual editing of the data.
- Users can import a previously exported JSON file, which will overwrite the existing data in the browser and reload the application with the new state. This requires user confirmation to prevent accidental data loss.